added bindings to collection_item.xml

--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/collection_name_visibility_constraintLayout"
         android:layout_width="200sp"
         android:paddingStart="18dp"
         android:paddingEnd="15dp"
