--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -10,9 +10,11 @@
     app:cardBackgroundColor="?attr/colorTertiary"
     app:contentPadding="2dp">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constrainedWidth="true"
+        >
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/comment_image"
@@ -20,40 +22,62 @@
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="15dp"
-            app:civ_border_width="2dp"
-            app:civ_border_color="#FF000000"
             android:contentDescription="@string/placeholder_comment"
-            tools:src="@drawable/ic_baseline_profile_24"
-            />
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_baseline_profile_24" />
 
         <TextView
             android:id="@+id/comment_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/comment_image"
-            android:text="@string/placeholder_comment_name"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="10dp"
             android:textColor="?attr/colorOnTertiary"
             android:textSize="16sp"
             android:textStyle="bold"
-            />
+            app:layout_constraintStart_toEndOf="@id/comment_image"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/placeholder_comment_name" />
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/comment_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/comment_name"
-            android:layout_toEndOf="@id/comment_image"
-            android:text="@string/placeholder_comment"
-            android:textColor="?attr/colorOnTertiary" />
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="3dp"
+            android:textColor="?attr/colorOnTertiary"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintStart_toEndOf="@id/comment_image"
+            app:layout_constraintTop_toBottomOf="@id/comment_name"
+            tools:text="@tools:sample/lorem/random" />
 
         <TextView
             android:id="@+id/comment_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/comment_text"
-            android:layout_toEndOf="@id/comment_image"
-            android:text="@string/placeholder_date" />
-    </RelativeLayout>
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/comment_image"
+            app:layout_constraintTop_toBottomOf="@id/comment_text"
+            tools:text="@string/placeholder_date" />
+
+        <ImageButton
+            android:id="@+id/delete_comment_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="12dp"
+            android:background="?attr/colorTertiary"
+            android:contentDescription="TODO"
+            android:src="@drawable/delete_24px"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
