--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -13,7 +13,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constrainedWidth="true"
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -42,14 +41,16 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="@string/placeholder_comment_name" />
 
-        <com.google.android.material.textview.MaterialTextView
+        <TextView
             android:id="@+id/comment_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="2dp"
             android:textColor="?attr/colorOnTertiary"
+            android:textAlignment="textStart"
             app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toStartOf="@id/delete_comment_button"
             app:layout_constraintStart_toEndOf="@id/comment_image"
             app:layout_constraintTop_toBottomOf="@id/comment_name"
             tools:text="@tools:sample/lorem/random" />
@@ -70,11 +71,12 @@
             android:layout_height="50dp"
             android:layout_marginTop="12dp"
             android:background="?attr/colorTertiary"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/delete_comment_button"
             android:src="@drawable/delete_24px"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/comment_text"
             app:layout_constraintTop_toTopOf="parent" />
 
 
