--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,19 +34,19 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/placeholder_home_welcome"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/placeholder_home_welcome"
+        />
 
     <com.google.android.material.divider.MaterialDivider
         android:id="@+id/divider_home_fragment_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.MaterialDivider.Heavy"
+        style="@style/Widget.Material3.MaterialDivider"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/textview_home_title"
         app:layout_constraintStart_toStartOf="parent"
-
         />
 
 
