--- a/app/src/main/res/layout/bottom_sheet_search_filter.xml
+++ b/app/src/main/res/layout/bottom_sheet_search_filter.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/bottomsheet_parent"
+    android:id="@+id/bottom_sheet_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
