--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,5 @@
     <color name="light_gray_background">#f1f2f3</color>
     <color name="light_gray_divider">#c6c6c6</color>
     <color name="grey_button">#717171</color>
-
+    <color name="light_blue">#b3d9ff</color>
 </resources>
