--- a/app/src/main/res/layout/select_collection_item.xml
+++ b/app/src/main/res/layout/select_collection_item.xml
@@ -36,9 +36,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginVertical="4dp"
-        android:layout_marginHorizontal="8dp"
-        tools:checked="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="12dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
